--- a/Task-2/index-1.html
+++ b/Task-2/index-1.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
-    <h1>Todo App</h1>
+    <h1>To-do App</h1>
     <div class="wrapper">
         <form>
             <input id="todo-input" type="text" placeholder="" autocomplete="off">
